--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@yodaos-jsar/types": "^0.2.1-rc0"
+  },
+  "dependencies": {
+    "websocket": "^1.0.34",
+    "ws": "^8.16.0"
   }
 }
