--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "types": [
-      "node",
-      "@yodaos-jsar/types"
-    ]
+    "types": ["node", "@yodaos-jsar/types"]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "**/*.ts"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["**/*.ts"]
 }
